--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,7 +46,7 @@
     <color name="colorPaymentStatusText">#278515</color>
     <color name="colorPaymentHistoryRowBg">#F8F5FA</color>
     <color name="skip_solid">#F4F4F8</color>
-
+    <color name="colorBackground">#EFF0F1</color>
 
 
 
