--- a/app/src/main/res/drawable/meal_type_rect_bg.xml
+++ b/app/src/main/res/drawable/meal_type_rect_bg.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-<solid
-    android:color="@color/colorAgeBg">
-</solid>
+    <solid
+        android:color="@color/white">
+    </solid>
     <corners
-        android:radius="@dimen/dimen_10"/>
+        android:radius="@dimen/dimen_5"/>
 
 </shape>
