--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -58,6 +58,7 @@
                     <com.github.siyamed.shapeimageview.RoundedImageView
                         android:id="@+id/ivUser"
                         app:siRadius="@dimen/dimen_20"
+                        app:siBorderColor="@color/white"
                         android:layout_marginEnd="@dimen/margin_8dp"
                         android:layout_marginTop="@dimen/dimen_12"
                         android:layout_width="@dimen/dimen_30"
