--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -193,7 +193,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_35"
                 android:background="@drawable/btn_bg"
-                android:backgroundTint="@color/skip_solid"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:onClick="@{()->loginViewModel.onLoginClick()}"
@@ -203,7 +202,7 @@
                 android:paddingEnd="@dimen/margin_4dp"
                 android:paddingBottom="@dimen/margin_12dp"
                 android:text="@string/next"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textAllCaps="false">
             </Button>
