--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -48,6 +48,7 @@
                 android:fontFamily="@font/avenir_black"/>
 
             <TextView
+                android:id="@+id/tvOtpMobile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/we_sent_it_to_the_number"
