--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,8 +32,8 @@
                     android:id="@+id/tvHeyMsg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="hey,Rehab"
-                    android:textSize="@dimen/font_14sp"
+                    android:text=""
+                    android:textSize="@dimen/font_16sp"
                     android:layout_gravity="start"
                     android:textAlignment="viewStart"
                     android:textColor="@color/colorPrimaryDark"
@@ -43,8 +43,8 @@
                     android:id="@+id/tvWelcomeMsg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="hey,Rehab"
-                    android:textSize="@dimen/font_12sp"
+                    android:text="@string/welcome_to_diva_fitness"
+                    android:textSize="@dimen/font_14sp"
                     android:layout_gravity="start"
                     android:textAlignment="viewStart"
                     android:textColor="@color/colorPrimaryDark"
