--- a/app/src/main/res/layout/row_banner.xml
+++ b/app/src/main/res/layout/row_banner.xml
@@ -20,6 +20,7 @@
             android:id="@+id/ivBanner"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_130"
+            app:siBorderColor="@color/white"
             android:src="@drawable/diva_place_holder"
             imageUrl="@{banner.bannerFile}"
             android:scaleType="fitXY"
