--- a/app/src/main/res/layout/row_diet_weekdays.xml
+++ b/app/src/main/res/layout/row_diet_weekdays.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="dietWeekDays"
@@ -12,10 +10,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dimen_5"
-        android:layout_marginEnd="@dimen/dimen_5"
-        android:layout_marginTop="@dimen/dimen_5"
+        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/margin_12dp"
+        android:layout_marginBottom="@dimen/margin_4dp"
         android:padding="@dimen/dimen_7"
+        android:elevation="@dimen/dimen_1"
         android:orientation="vertical"
         android:background="@drawable/diet_weekdays_stroke_bg">
 
@@ -39,11 +39,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textSize="@dimen/font_18sp"
+                    android:textSize="@dimen/font_16sp"
                     android:textColor="@color/black"
                     userName="@{dietWeekDays.name}"
-                    android:padding="@dimen/dimen_12"
-                    android:fontFamily="@font/avenir_black"
+                    android:padding="@dimen/font_10sp"
+                    android:fontFamily="@font/avenir_light"
                     android:text="@string/my_diet_plan" />
 
             </LinearLayout>
@@ -58,7 +58,30 @@
                 android:layout_height="wrap_content">
 
 
+               <LinearLayout
+                   android:visibility="visible"
+                   android:id="@+id/lnrUserDietPlan"
+                   android:background="@drawable/add_rect_bg"
+                   android:layout_width="wrap_content"
+                   android:layout_height="match_parent">
+
+                   <TextView
+                       android:layout_width="match_parent"
+                       android:layout_height="match_parent"
+                       android:textSize="@dimen/font_14sp"
+                       android:textColor="@color/black"
+                       android:paddingTop="@dimen/dimen_5"
+                       android:paddingStart="@dimen/dimen_10"
+                       android:paddingEnd="@dimen/dimen_10"
+                       android:paddingBottom="@dimen/dimen_5"
+                       android:fontFamily="@font/avenir_light"
+                       android:text="@string/view" />
+
+               </LinearLayout>
+
                 <ImageView
+                    android:id="@+id/ivUserDietPlan"
+                    android:visibility="gone"
                     android:layout_width="@dimen/dimen_50"
                     android:layout_height="@dimen/dimen_50"
                     android:padding="@dimen/dimen_10"
