--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/dimen_20">
 
@@ -26,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:fontFamily="@font/avenir_roman"
+            android:fontFamily="@font/avenir_black"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/font_18sp"
             android:layout_centerInParent="true"/>
