--- a/app/src/main/res/layout/activity_diet_plan.xml
+++ b/app/src/main/res/layout/activity_diet_plan.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="dietWeekDayViewModel"
@@ -9,21 +7,189 @@
         <import type="android.view.View" />
     </data>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+     <LinearLayout
+         android:layout_above="@+id/lnrbtnSave"
+            android:id="@+id/llnrDietPlan"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <include
-            android:id="@+id/llTop"
-            layout="@layout/toolbar" />
+                android:id="@+id/llTop"
+                layout="@layout/toolbar" />
 
+       <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="@dimen/margin_16dp"
+                android:layout_marginEnd="@dimen/margin_16dp"
+                android:background="@drawable/rating_bg"
+                android:backgroundTint="@color/colorPrimary"
+                android:padding="@dimen/dimen_10"
+                android:layout_marginTop="@dimen/dimen_7">
 
-        <include
-            layout="@layout/layout_recycler_view"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="4"
+        android:layout_marginTop="@dimen/dimen_7">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:gravity="center">
 
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/proteins"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_light"/>
+
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/tvProteins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="60kg"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_black"/>
 
     </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/carbs"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_light"/>
+
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/tvCarbs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="60kg"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_black"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fats"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_light"/>
+
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/tvFacts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="60kg"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_black"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <me.grantland.widget.AutofitTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calories"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_light"/>
+
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/tvCalories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="60kg"
+                android:textColor="@color/white"
+                android:maxLines="1"
+                android:textSize="@dimen/font_9sp"
+                android:fontFamily="@font/avenir_black"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+        </LinearLayout>
+            <include
+                layout="@layout/layout_recycler_view"/>
+        </LinearLayout>
+
+    <LinearLayout
+            android:layout_marginStart="@dimen/margin_16dp"
+            android:layout_marginEnd="@dimen/margin_16dp"
+            android:layout_alignParentBottom="true"
+            android:paddingTop="@dimen/margin_16dp"
+            android:paddingBottom="@dimen/margin_16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lnrbtnSave"
+            android:background="@color/white"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnSaveDietPlan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_bg"
+                android:fontFamily="@font/avenir_roman"
+                android:text="@string/save"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:textAllCaps="false">
+            </Button>
+
+
+        </LinearLayout>
+
+</RelativeLayout>
+
 
 </layout>
