--- a/app/src/main/res/drawable/personal_trainer_stroke_bg.xml
+++ b/app/src/main/res/drawable/personal_trainer_stroke_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="@dimen/dimen_1"
+        android:width="0.5dp"
         android:color="@color/colorHintText"/>
 
     <corners
