--- a/app/src/main/res/drawable/rating_bg.xml
+++ b/app/src/main/res/drawable/rating_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/colorRatingBg"/>
+        android:color="@color/colorAgeBg"/>
 
     <corners
-        android:radius="@dimen/dimen_5"/>
+        android:radius="@dimen/margin_8dp"/>
 
 </shape>
