10/03/2021 about us and feedback

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -69,6 +69,7 @@
 
 
         <TextView
+            android:id="@+id/tvAboutUs"
             android:layout_below="@+id/ivSplashLogo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
