--- a/app/src/main/res/drawable/rect_unselected_tenure.xml
+++ b/app/src/main/res/drawable/rect_unselected_tenure.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners
-        android:radius="8dp"
+        android:radius="7dp"
         />
-
-    <stroke android:color="@color/colorWhite"
-        android:width="1dp"/>
+   <solid
+       android:color="@color/white"/>
 
 
 </shape>
