--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -71,6 +71,7 @@
     <dimen name="dimen_400">400dp</dimen>
     <dimen name="dimen_300">300dp</dimen>
     <dimen name="font_9sp">9sp</dimen>
+    <dimen name="dimen_125">125dp</dimen>
 
 
 </resources>
