--- a/app/src/main/res/layout/activity_trainer_details.xml
+++ b/app/src/main/res/layout/activity_trainer_details.xml
@@ -47,7 +47,7 @@
                             android:padding="@dimen/dimen_10"/>
 
 
-                        <com.github.siyamed.shapeimageview.RoundedImageView
+                    <com.github.siyamed.shapeimageview.RoundedImageView
                             android:id="@+id/ivTrainerImage"
                             android:layout_width="@dimen/dimen_200"
                             android:layout_height="@dimen/dimen_200"
@@ -323,7 +323,7 @@
                                         android:orientation="horizontal">
 
                                         <ImageView
-                                            android:id="@+id/ivSubtract"
+                                            android:id="@+id/ivSessionSubtract"
                                             android:layout_width="40dp"
                                             android:layout_height="40dp"
                                             android:padding="8dp"
@@ -356,7 +356,7 @@
 
 
                                         <ImageView
-                                            android:id="@+id/ivAdd_person"
+                                            android:id="@+id/ivSessionAdd_person"
                                             android:layout_width="40dp"
                                             android:layout_height="40dp"
                                             android:padding="8dp"
@@ -436,7 +436,7 @@
                                 android:background="@drawable/add_diet_plan_rect">
 
                                 <ImageView
-                                    android:id="@+id/ivMinus"
+                                    android:id="@+id/ivNoOfPeopleMinus"
                                     android:layout_width="@dimen/dimen_40"
                                     android:layout_height="@dimen/dimen_40"
                                     android:padding="@dimen/dimen_10"
@@ -454,7 +454,7 @@
                                     android:id="@+id/tvNoOfPeople"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="2"
+                                    android:text="1"
                                     android:textColor="@color/colorPrimaryDark"
                                     android:textSize="@dimen/font_13sp"
                                     android:fontFamily="@font/avenir_black"
@@ -469,7 +469,7 @@
                                     android:background="@color/colorHintText"/>
 
                                 <ImageView
-                                    android:id="@+id/ivAdd"
+                                    android:id="@+id/ivNoOfPeopleAdd"
                                     android:layout_width="@dimen/dimen_40"
                                     android:layout_height="@dimen/dimen_40"
                                     android:padding="@dimen/dimen_10"
@@ -507,9 +507,10 @@
                         android:fontFamily="@font/avenir_black"/>
 
                     <TextView
+                        android:id="@+id/tvAboutUs"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book"
+                        android:text=""
                         android:textColor="@color/colorText"
                         android:textSize="@dimen/font_10sp"
                         android:layout_gravity="start"
