--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,13 @@
         <item name="android:padding">@dimen/dimen_5</item>
     </style>
 
+    <style name="CustomTextAppearance" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/dimen_12</item>
+        <item name="fontFamily">@font/avenir_black</item>
+    </style>
+
+
     <style name="AppTheme.Transparent" parent="Theme.Diva">
         <!-- Style for the second activity -->
         <item name="android:windowIsTranslucent">true</item>
