--- a/app/src/main/res/layout/activity_slot_book.xml
+++ b/app/src/main/res/layout/activity_slot_book.xml
@@ -72,7 +72,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                                 android:id="@+id/calendarView"
                                 android:layout_width="match_parent"
                                 app:mcv_arrowColor="@color/white"
@@ -104,10 +104,12 @@
             </LinearLayout>
 
 
+
         <LinearLayout
             android:id="@+id/lnrBookSlots"
             android:orientation="vertical"
-            android:background="@color/white"
+            android:background="@color/colorAgeBg"
+            android:elevation="@dimen/dimen_2"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -116,14 +118,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@color/colorWhite">
+                android:orientation="horizontal">
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvSelectedSlots"
-                    android:layout_width="match_parent"
+
+                <TextView
+                    android:id="@+id/viewSelectedSlots"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_5"/>
+                    android:background="@drawable/rect_preview"
+                    android:textSize="@dimen/font_10sp"
+                    android:paddingTop="@dimen/dimen_12"
+                    android:layout_gravity="center"
+                    android:paddingStart="@dimen/dimen_12"
+                    android:paddingEnd="@dimen/dimen_12"
+                    android:gravity="center"
+                    android:paddingBottom="@dimen/dimen_12"
+                   android:layout_marginStart="@dimen/margin_8dp"
+                    android:text="@string/previous"
+                    android:textColor="@color/colorText"
+                    android:fontFamily="@font/avenir_light" />
 
 
                 <Button
