--- a/app/src/main/res/layout/row_slots.xml
+++ b/app/src/main/res/layout/row_slots.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
@@ -8,40 +9,40 @@
 
         <import type="android.view.View"/>
     </data>
+-->
 
-    <RelativeLayout
-        android:id="@+id/rltSlots"
-        android:layout_width="@dimen/dimen_150"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
-        android:background="@drawable/package_bg_unselected"
-        android:paddingBottom="@dimen/dimen_10"
-        android:layout_marginTop="@dimen/margin_4dp"
-        android:layout_marginBottom="@dimen/margin_4dp"
-        android:elevation="1dp">
+<RelativeLayout
+    android:id="@+id/rltSlots"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/margin_8dp"
+    android:layout_marginEnd="@dimen/margin_8dp"
+    android:background="@drawable/package_bg_unselected"
+    android:paddingBottom="@dimen/dimen_10"
+    android:layout_marginTop="@dimen/margin_4dp"
+    android:layout_marginBottom="@dimen/margin_4dp"
+    android:elevation="1dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ImageView
+        android:id="@+id/ivSelected"
+        android:layout_width="@dimen/margin_8dp"
+        android:layout_height="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/dimen_2"
+        android:layout_marginEnd="@dimen/margin_8dp"
+        android:layout_gravity="center_vertical"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/dimen_7"/>
+
+
+
 
         <LinearLayout
-            android:id="@+id/llSelected"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true">
-
-            <ImageView
-                android:id="@+id/ivSelected"
-                android:layout_width="@dimen/dimen_10"
-                android:layout_height="@dimen/dimen_10"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/dimen_7"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@id/llSelected">
+            android:layout_below="@id/ivSelected">
 
             <ImageView
                 android:id="@+id/ivClock"
@@ -58,7 +59,7 @@
                 android:textSize="@dimen/font_10sp"
                 android:paddingStart="8dp"
                 android:text="zxjcghjzcg"
-                android:textColor="@color/colorText"
+                android:textColor="@color/colorHeadingText"
                 android:fontFamily="@font/avenir_light" />
 
 
@@ -66,5 +67,5 @@
 
     </RelativeLayout>
 
-
-</layout>
+<!--
+</layout>-->
